fix: fix overflow-x on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -72,4 +72,5 @@
 body {
   font-family: "Outfit", sans-serif;
   font-weight: 400;
+  overflow-x: hidden;
 }
